--- a/formalia/forside.tex
+++ b/formalia/forside.tex
@@ -8,7 +8,7 @@
 
 \phantom{hul}
 
-\textsl{\Huge (S)PiCams} \\ \vspace{1cm}
+\textsl{\Huge \name{}} \\ \vspace{1cm}
 
 \rule{13cm}{3mm} \\ %\vspace{1.5cm}
 %\vspace{1cm}
@@ -20,10 +20,10 @@
 \end{center}
 \begin{flushright}
 \vspace{2cm}
-\textsc{\Large P5 Project \\
-Group SW508E15 \\
+\textsc{\Large P6 Project \\
+Group SW608F16 \\
 Software\\
 Aalborg University\\
-21\textsuperscript{st} December 2015\\
+26\textsuperscript{th} May 2016\\
 \includegraphics[width=0.25\textwidth]{graphics/AAU-logo-stud-UK-RGB.pdf}}
 \end{flushright}
