--- a/formalia/titelblad.tex
+++ b/formalia/titelblad.tex
@@ -27,35 +27,33 @@ https://www.cs.aau.dk}
 
 \begin{minipage}[t]{0.48\textwidth}
 \textbf{Title:} \\[5pt]\bigskip\hspace{2ex}    
-(S)PiCams\\
+\name\\
 \textbf{Project:} \\[5pt]\bigskip\hspace{2ex}
-P5
+P6
 
 \textbf{Project period:} \\[5pt]\bigskip\hspace{2ex}
-September 2015 - December 2015
+Febuary 2016 - May 2016
 
 \textbf{Project group:} \\[5pt]\bigskip\hspace{2ex}
-SW508E15
+SW608F16
 
 \textbf{Members:} \\[5pt]\hspace*{2ex}
-Martin Kristjansen \\\hspace*{2ex}
-Jonas S. Madsen \\\hspace*{2ex}
+Oliver B. Købsted \\\hspace*{2ex}
 Anders L. Matthiassen \\\hspace*{2ex}
-Lars Nielsen \\\hspace*{2ex}
+Jacob Nielsen \\\hspace*{2ex}
 Simon A. Pedersen \\\hspace*{2ex}
-Christian Stephansen
 
 
 \textbf{Supervisor:} \\[5pt]\hspace*{2ex}
-Johannes Lindhart Borresen
+Bin Yang
 
 
 \vspace*{1cm}
 
-\textbf{Prints: 8} \\
-\textbf{Pages: 99} \\
-\textbf{Appendices: 2} \\
-\textbf{Ended: 21-12-2015}
+\textbf{Prints: 6} \\
+\textbf{Pages: XXX} \\
+\textbf{Appendices: } \\
+\textbf{Ended: 26-5-2016}
 
 \end{minipage}
 \hfill
