--- a/rapport.tex
+++ b/rapport.tex
@@ -10,6 +10,10 @@
 \include{formalia/forord}
 \cleardoublepage
 
+%%%% INTRODUCTION %%%%
+\include{introduction/intro}
+
+
 \phantomsection													% Kunstigt afsnit, som hyperlinks kan 'holde fast i'
 \pdfbookmark[0]{Table of Contents}{Contents}					% Tildeler en klikbar bookmark til den endelige PDF
 \tableofcontents*												% Indholdsfortegnelsen (kaldet ToC)
