Updates the structure of our report. Added new chapters, folders and documents. Removed some leftovers from the prevous semestre docs

--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,2 +1,5 @@
 \chapter{Introduction}
 This is about indoor positioning!
+
+
+Bin: A chapter describing the role of the group’s work in the setting of the multi-project.
