--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,5 +1,6 @@
 \chapter{Introduction}
 This is about indoor positioning!
 
-
-Bin: A chapter describing the role of the group’s work in the setting of the multi-project.
+\ofx{just at law quote from the "cookiedirective"}
+3. Member States shall ensure that the use of electronic communications networks to store information or to gain access to information stored in the terminal equipment of a subscriber or user is only allowed on condition that the subscriber or user concerned is provided with clear and comprehensive information in accordance with Directive 95/46/EC, inter alia about the purposes of the processing, and is offered the right to refuse such processing by the data controller. This shall not prevent any technical storage or access for the sole purpose of carrying out or facilitating the transmission of a communication over an electronic communications network, or as strictly necessary in order to provide an information society service explicitly requested by the subscriber or user.
+%http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML
