progress on cisco document

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -1,1 +1,12 @@
-\section{Cisco MSE}
+\section{System for Monitoring Electronic Mobile Devices} %Cisco MSE
+Nødvendigheden for at vervåge
+	Dette vil vre en ntro til indørsproblemstillinger afsnittet som skal fungere som den teoretske del for dette afsnit
+
+\subsection{Cisco}
+Cisco has developed a location aware wireless network system, the Cisco Unified Wireless Network(UWN), which utilises Wi-Fi and other wireless communication protocols in order to develop other indoor location based services\cite{uwn}.
+
+Hvad er cisco
+Hvorfor er det valgt?
+Hvad vil vi havde ud af systemet, og hvordan?
+
+Overgang til server kommunikation?
