--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,7 +1,12 @@
 \chapter{Introduction}
-Indoor positioning is according to Don Dodge, developer evangelist at Google, quote: "\textit{the most exciting innovation on the horizon.}"\cite{DonDNextBigThing}.
-\ofx{How do we use quote?}
-In his blog \textit{The Next Big Thing}, he writes that he believe indoor positioning and location will be one the the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
+Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
+Indoor positioning is according to Don Dodge, developer evangelist at Google, 
+\begin{quotation}
+	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
+\end{quotation}
+
+In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one the the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
+
 
 \ofx{just at law quote from the "cookiedirective"}
 3. Member States shall ensure that the use of electronic communications networks to store information or to gain access to information stored in the terminal equipment of a subscriber or user is only allowed on condition that the subscriber or user concerned is provided with clear and comprehensive information in accordance with Directive 95/46/EC, inter alia about the purposes of the processing, and is offered the right to refuse such processing by the data controller. This shall not prevent any technical storage or access for the sole purpose of carrying out or facilitating the transmission of a communication over an electronic communications network, or as strictly necessary in order to provide an information society service explicitly requested by the subscriber or user.
