--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,11 @@
+@MANUAL{WhatIsIPS,
+	title = {Indoor Positioning Systems?},
+	author = {senionlab},
+	address = {\url{https://senionlab.com/indoor-positioning-system/}},
+	date = {2015},
+	note = {Accessed: 15-2-2016}
+}
+
 @MANUAL{DonDNextBigThing,
 	title = {Keen On… Don Dodge: Why Indoor Location Is The Next Big Thing [TCTV]},
 	author = {Andrew Keen},
@@ -5,8 +13,6 @@
 	date = {12-09-2012},
 	note = {Accessed: 15-2-2016}
 }
-
-
 
 @MANUAL{DonDIndoorIsNext,
 	title = {My 5 predictions for 2015 and beyond},
