--- a/bib.bib
+++ b/bib.bib
@@ -7,7 +7,7 @@
 	note = {Accessed: 15-2-2016}
 }
 
-@MANUAL{uwn,
+@article{uwn,
   author  = {PCisco Systems, Inc.}, 
   title   = {Wi-Fi Location-Based Services 4.1 Design Guide},
   year    = {2008},
