More progress on cisco

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -1,11 +1,16 @@
-\section{System for Monitoring Electronic Mobile Devices} %Cisco MSE
-Nødvendigheden for at vervåge
-	Dette vil vre en ntro til indørsproblemstillinger afsnittet som skal fungere som den teoretske del for dette afsnit
+\section{System for Monitoring Electronic Mobile Devices}\label{sec:monitoring}
+This section will describe a solution for the problems associated with indoor navigation and monitoring of multiple mobile devices.    
 
-\subsection{Cisco}
-Cisco has developed a location aware wireless network system, the Cisco Unified Wireless Network(UWN), which utilises Wi-Fi and other wireless communication protocols in order to develop other indoor location based services\cite{uwn}.
+\subsection{Theory ~problems associated with indoor navigation and monitoring of multiple mobile devices~}
+Text
 
-Hvad er cisco
+\subsection{Cisco}\label{subsec:cisco}
+Cisco has developed a location aware wireless network system, the Cisco Unified Wireless Network(UWN), which utilises Wi-Fi and other wireless communication protocols in order to develop other indoor location based services\cite{uwn}. We have access to a sever that runs the Cisco UWN software and is set up to monitor the entirety of the university campus building Cassiopeia at Aalborg University. We have chosen to use the data that is available from the campus as it is comprehensible to set the system up in a new environment. 
+
+% billede af hvordan det ser ud?
+% http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg
+The system contains information about the access points that are used to model the building and the devices that are connected to those points. It is possible to get the relative position of any connected devices in 
+
 Hvorfor er det valgt?
 Hvad vil vi havde ud af systemet, og hvordan?
 
