--- a/bib.bib
+++ b/bib.bib
@@ -31,3 +31,14 @@
 	date = {01-01-2015},
 	note = {Accessed: 15-2-2016}
 }
+
+@article{indoor_bin,
+  title={Indoor-A New Data Management Frontier.},
+  author={Jensen, Christian S and Lu, Hua and Yang, Bin},
+  journal={IEEE Data Eng. Bull.},
+  volume={33},
+  number={2},
+  pages={1--2},
+  year={2010}
+}
+
