--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -6,3 +6,6 @@ Each cycle may contain more or less of each of these elements.
 This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
 
 \input{1sprint/cisco.tex}
+%Alternative IPS 
+%se what we did in cisco 
+\input{1sprint/premission}
