Some o' that law stuff!
Does and donts

--- a/bib.bib
+++ b/bib.bib
@@ -13,7 +13,7 @@
   year    = {2008},
   pages   = {1.1 - 1.2},
   month   = {5},
-  note    = {visted: 15/2/2016}
+  note    = {Accessed: 15/2/2016}
 }
 
 @MANUAL{DonDNextBigThing,
@@ -42,3 +42,26 @@
   year={2010}
 }
 
+@MANUAL{TrafficIlligal,
+	title = {Udbredt system til trafikovervågning er ulovligt},
+	author = {Magnus Boye},
+	address = {\url{http://www.version2.dk/artikel/udbredt-trafikovervaagningssystem-er-ulovligt-76565}},
+	date = {26-01-2015},
+	note = {Accessed: 19-2-2016}
+}
+
+@MANUAL{CookieDirective,
+	title = {Directive on privacy and electronic communications},
+	author = { the European Parliament and of the Council},
+	address = {\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML}},
+	date = {12-07-2002},
+	note = {Accessed: 19-2-2016}
+}
+
+@MANUAL{TrafficOK,
+	title = {Blip Systems afgoerelse},
+	author = { Danish Business Authority},
+	address = {\url{https://erhvervsstyrelsen.dk/sites/default/files/media/afgoerelse_-_blip_systems.pdf}},
+	date = {26-03-2015},
+	note = {Accessed: 19-2-2016}
+}
