--- a/1sprint/premission.tex
+++ b/1sprint/premission.tex
@@ -2,16 +2,11 @@
 By using Cisco it is possible to save peoples unique Mac-address and use this to track them. It is illegal to do so without the individuals acceptance, it will therefore be necessary to to take this into account when designing the system \cite{TrafficIlligal}.
 Traffic systems using the wifi signal in peoples smart phones have been used in Denmark. This is done by sensors registering the unique Mac-address, which were hashed and re-hashed in the sensors before being stored. Despite that it does not make it possible to track the users\cite{TrafficIligal}, it is illegal according to the \textit{Directive on privacy and electronic communications} article 5(3)\cite{CookieDirective} which can be seen in the following quote
 
-\ofx{Do we have anything to number and label quotes?}
 \begin{quote}
 \textit{'Member States shall ensure that the use of electronic communications networks to store information or to gain access to information stored in the terminal equipment of a subscriber or user is only allowed on condition that the subscriber or user concerned is provided with clear and comprehensive information...'}
 \end{quote}
 
-However, the Danish Business Authority conclusion to this was that the system did not fit in \textit{Directive on privacy and electronic communications} due to the end-user being unidentifiable\cite{TrafficOK} as described by article 3(1)\cite{CookieDirective}.
+However, the Danish Business Authoritys conclusion to this was that the system did not fit in \textit{Directive on privacy and electronic communications} due to the end-user being unidentifiable\cite{TrafficOK} as described by article 3(1)\cite{CookieDirective}.
 
 %http://eur-lex.europa.eu/legal-content/DA/TXT/PDF/?uri=CELEX:31995L0046&from=da
-
-It will therefore be necessary to differ between those who have given their permission to this and those who have not. By differing between these it will be possible to sort out any identifiers form those who have not agreed to their unique information being stored.
-
-% Member States shall ensure that the use of electronic communications networks to store information or to gain access to information stored in the terminal equipment of a subscriber or user is only allowed on condition that the subscriber or user concerned is provided with clear and comprehensive information in accordance with Directive 95/46/EC, inter alia about the purposes of the processing, and is offered the right to refuse such processing by the data controller. This shall not prevent any technical storage or access for the sole purpose of carrying out or facilitating the transmission of a communication over an electronic communications network, or as strictly necessary in order to provide an information society service explicitly requested by the subscriber or user.
-%##### This is the whole quote but I dont think we need more? ##### 
+To ensure no such debates being raised in relation to this project, it will be necessary to differ between those who have given their permission to this and those who have not. By differing between these it will be possible to sort out any identifiers form those who have not agreed to their unique information being stored.
