--- a/bib.bib
+++ b/bib.bib
@@ -65,3 +65,11 @@
 	date = {26-03-2015},
 	note = {Accessed: 19-2-2016}
 }
+
+@MANUAL{CiscoTri,
+	title = {A Technical Review of Cisco's Wi Fi-Based Location Analytics White Paper},
+	author = {Dr. James Little and Dr. Brendan O’Brien},
+	address ={\url{http://www.cisco.com/c/en/us/products/collateral/wireless/mobility-services-engine/white_paper_c11-728970.pdf}},
+	date = {July 2013},
+	note = {Accessed: 22-2-2016}
+}
