Small fixes, started on security section

--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -9,3 +9,4 @@ This chapter covers the “design of an application that handles a substantial p
 %Alternative IPS 
 %se what we did in cisco 
 \input{1sprint/premission}
+\input{1sprint/security}
