--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -6,7 +6,7 @@ When monitoring electronic devises in indoor spaces, a set of obstacles are pres
 
 There are ways to overcome the GPS issue and Google presents one possible solution. They have made indoor navigation and tracking possible in several indoor spaces trough their Indoor Maps project which lets users map an building by uploading a floor plan of said building. After the floor plan have been accepted, the system will request information about the location of the Wi-FI access points in the building. By doing so the system is able to triangulate with the access points and combine that information with the GPS location, thereby utilising both technologies to get the position of a device.
 
-Another solution would could be to utilise Radio Frequency Identification(RFID) to create checkpoints throughout a building. These checkpoint would be placed in doors or other room entrances and would utilise an RFID scanner that reports any observed devices which is equipped with a RFID tag\cite{indoor_bin}. %The environment of which the system will be used in have to be modelled in order to make use of the checkpoint data. 
+Another solution would be to utilise Radio Frequency Identification(RFID) to create checkpoints throughout a building. These checkpoint would be placed in doors or other room entrances and would utilise an RFID scanner that reports any observed devices which is equipped with a RFID tag\cite{indoor_bin}. %The environment of which the system will be used in have to be modelled in order to make use of the checkpoint data. 
 This approach has two major downsides. The first lies in the need of hardware as the environment which the system would operate in is not equipped with the scanners, which will have to be installed and modelled. The second downside is the limitations of the system. It is only possible to get new data about a device's position when it has been observed at a scanner, which means there will be a lot of downtime if the device is moving down a hallway or is stationary in a room. It is therefore not possible to get a precise position of a device after it has moved away from a scanner as the direction which the device moved in is unpredictable. A solution to this problem could be to use more scanners or combine the system with more technologies as previously suggested at the Google system.
 
 \subsection{Cisco}\label{subsec:cisco}
