Few changes to Cisco

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -13,7 +13,7 @@ There have also been done resurge on Cisco. Cisco has developed a location aware
 The building is modelled by the use of an top-down image of the floor plan. The image will be converted to a coordinate system that is placed on top of the model which is then supplied with the positions of the access points that are set up in the building. From there it is possible to get the relative position of any nearby devices in relation to the origin of a coordinate system.It is these positions that will be used in order to track and analyse people.
 
 \subsection{Cisco}\label{subsec:cisco}
-At the university we have access to a sever that runs the Cisco UWN software and is set up to monitor every building of the campus at Aalborg University. We have chosen to use the data that is available from the here form as it is comprehensible to set the system up in a new environment.
+At the university we have access to a sever that runs the Cisco UWN software which is set up to monitor every building on campus at Aalborg University. We have chosen to use the data that is available from here as it is comprehensible to set the system up in a new environment.
 
 % billede af hvordan det ser ud?
 %http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg
