--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -5,5 +5,5 @@ Indoor positioning is according to Don Dodge, developer evangelist at Google,
 	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
 \end{quotation}
 
-In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one the the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
+In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
 
