--- a/rapport.tex
+++ b/rapport.tex
@@ -59,7 +59,7 @@
 %%%% Kilder %%%%
 \begingroup
 	\raggedright
-%\bibliography{bib.bib}							% Litteraturlisten inkluderes
+%    \bibliography{bib}							% Litteraturlisten inkluderes
 	\printbibliography
 \endgroup
 
