--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -321,16 +321,16 @@
 
 %%%% Personlige FixMes %%%%
 \newcommand{\ofx}[1]{
-\fxnote[author=Oliver]{#1}
+\fxnote{Oliver aka the sv guy: #1}
 }
 \newcommand{\jfx}[1]{
-\fxnote[author=Jacob]{#1}
+\fxnote{Jacob aka master of awesome: #1}
 }
 \newcommand{\afx}[1]{
-\fxnote[author=Anders]{#1}
+\fxnote{Anders aka karl-koder: #1}
 }
 \newcommand{\sfx}[1]{
-\fxnote[author=Simon]{#1}
+\fxnote{Simon aka BOB: #1}
 }
 
 % ¤¤ Specielle tegn ¤¤ %
