Fixed bib cite that caused the report to be unable compile

--- a/bib.bib
+++ b/bib.bib
@@ -1,10 +1,19 @@
+@article{indoor_bin,
+  title={Indoor-A New Data Management Frontier.},
+  author={Jensen, Christian S and Lu, Hua and Yang, Bin},
+  journal={IEEE Data Eng. Bull.},
+  volume={33},
+  number={2},
+  pages={1--2},
+  year={2010}
+}
 
 @MANUAL{WhatIsIPS,
-	title = {Indoor Positioning Systems?},
-	author = {senionlab},
-	address = {\url{https://senionlab.com/indoor-positioning-system/}},
-	date = {2015},
-	note = {Accessed: 15-2-2016}
+  title = {Indoor Positioning Systems?},
+  author = {senionlab},
+  address = {\url{https://senionlab.com/indoor-positioning-system/}},
+  date = {2015},
+  note = {Accessed: 15-2-2016}
 }
 
 @article{uwn,
@@ -17,11 +26,11 @@
 }
 
 @MANUAL{DonDNextBigThing,
-	title = {Keen On… Don Dodge: Why Indoor Location Is The Next Big Thing [TCTV]},
-	author = {Andrew Keen},
-	address = {\url{http://techcrunch.com/2012/09/17/keen-on-don-dodge-why-indoor-location-is-the-next-big-thing-tctv/}},
-	date = {12-09-2012},
-	note = {Accessed: 15-2-2016}
+  title = {Keen On… Don Dodge: Why Indoor Location Is The Next Big Thing [TCTV]},
+  author = {Andrew Keen},
+  address = {\url{http://techcrunch.com/2012/09/17/keen-on-don-dodge-why-indoor-location-is-the-next-big-thing-tctv/}},
+  date = {12-09-2012},
+  note = {Accessed: 15-2-2016}
 }
 
 @MANUAL{DonDIndoorIsNext,
@@ -32,29 +41,11 @@
 	note = {Accessed: 15-2-2016}
 }
 
-@article{indoor_bin,
-  title={Indoor-A New Data Management Frontier.},
-  author={Jensen, Christian S and Lu, Hua and Yang, Bin},
-  journal={IEEE Data Eng. Bull.},
-  volume={33},
-  number={2},
-  pages={1--2},
-  year={2010}
-}
-
 @MANUAL{TrafficIlligal,
 	title = {Udbredt system til trafikovervågning er ulovligt},
 	author = {Magnus Boye},
 	address = {\url{http://www.version2.dk/artikel/udbredt-trafikovervaagningssystem-er-ulovligt-76565}},
 	date = {26-01-2015},
-	note = {Accessed: 19-2-2016}
-}
-
-@MANUAL{CookieDirective,
-	title = {Directive on privacy and electronic communications},
-	author = { the European Parliament and of the Council},
-	address = {\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML}},
-	date = {12-07-2002},
 	note = {Accessed: 19-2-2016}
 }
 
@@ -72,4 +63,12 @@
 	address ={\url{http://www.cisco.com/c/en/us/products/collateral/wireless/mobility-services-engine/white_paper_c11-728970.pdf}},
 	date = {July 2013},
 	note = {Accessed: 22-2-2016}
+}
+
+@MANUAL{CookieDirective,
+  title = {Directive on privacy and electronic communications},
+  author = {The European parliament},
+  address = {\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML}},
+  date = {12-07-2002},
+  note = {Accessed: 19-2-2016}
 }
