--- a/rapport.tex
+++ b/rapport.tex
@@ -41,7 +41,7 @@
 
 
 %%Glossary
-\printglossary[style=long]
+%\printglossary[style=long]
 
 %% List of figures
 \listoffigures
@@ -58,9 +58,9 @@
 
 %%%% Kilder %%%%
 \begingroup
-	\raggedright
+\raggedright
 %    \bibliography{bib}							% Litteraturlisten inkluderes
-	\printbibliography
+\printbibliography
 \endgroup
 
-\end{document}
+\end{document}	
