Bin notes to intro

--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -7,3 +7,8 @@ Indoor positioning is according to Don Dodge, developer evangelist at Google,
 
 In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
 
+People spend 87\% of their time in indoor paces and with buildings becoming more complex e.g. airports, malls and university campuses, there is an increased need for indoor location systems.
+%http://www.nature.com/jes/journal/v11/n3/full/7500165a.html
+
+Talk about it being more accurate than GPS
+%http://www.scientificamerican.com/article/indoor-positioning-system/
