--- a/bib.bib
+++ b/bib.bib
@@ -72,3 +72,10 @@
   date = {12-07-2002},
   note = {Accessed: 19-2-2016}
 }
+@MANUAL{IPSoverGPS,
+	title = {Help Patrons Find Their Way With Indoor Google Maps},
+	author = {Chad Mairn},
+	address = {\url{http://www.infotoday.com/cilmag/apr14/Mairn--Help-Patrons-Find-Their-Way-With-Indoor-Google-Maps.shtml}},
+	date = {12-07-2002},
+	note = {Accessed: 24-2-2016}
+}
