Moved some contetn from intro to the abstract

--- a/formalia/synopsis.tex
+++ b/formalia/synopsis.tex
@@ -1,5 +1,1 @@
-This report covers the subjects of designing an embedded system for target tracking in a 3D space. The focus is to design a surveillance system, which is achieved through the use of multiple camera units performing object recognition. Furthermore, the system has extended functionality which allows for target tracking, by using a laser pointer mounted on a Lego-constructed rig controlled by two dc motors.
-
-The general flow of information in the system is as follows: the camera units, composed of Raspberry Pis and webcams, each obtain information about a recognised object and calculate the object's direction relative to the camera. This information is communicated through a modem to an NXT brick, where a triangulation is performed to determine where the object is relative to the Lego-constructed rig. 
-
-The system's dependability is analysed which presents the relevant attributes in the designed system. The relevant actuator tests of the designed system is presented and the results are analysed. The theory behind object recognition is introduced and explained.
+Indoor positioning systems (IPS) locate objects inside a restricted area, this is typically done via mobile devices such as smart phones and tablets. This is done by using multiple access-points each calculating the distance to the device and with a combined effort positioning the device with high accuracy\cite{WhatIsIPS}. 
