progress on intro

--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,13 +1,15 @@
 \chapter{Introduction}
+In this day and age people are using most of their time indoor. This includes when they are at home or work where they are doing their daily activities and locations they are familiar with. However, people will from time to time need to move outside of the places which are familiar to them, as they might have shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time and do not now how navigate to their desired destination. 
+
+The navigation distress is further enhanced by the fact that people spend 87\% of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This 
+, there is an increased need for indoor location systems
+
 Indoor positioning is according to Don Dodge, developer evangelist at Google, 
 \begin{quotation}
 	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
 \end{quotation}
 
 In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
-
-People spend 87\% of their time in indoor paces and with buildings becoming more complex e.g. airports, malls and university campuses, there is an increased need for indoor location systems.
-%http://www.nature.com/jes/journal/v11/n3/full/7500165a.html
 
 Talk about it being more accurate than GPS
 %http://www.scientificamerican.com/aricle/indoor-positioning-system/
