--- a/bib.bib
+++ b/bib.bib
@@ -79,3 +79,15 @@
 	date = {12-07-2002},
 	note = {Accessed: 24-2-2016}
 }
+
+@article{klepeis2001national,
+	title={The National Human Activity Pattern Survey (NHAPS): a resource for assessing exposure to environmental pollutants},
+	author={Klepeis, Neil E and Nelson, William C and Ott, Wayne R and Robinson, John P and Tsang, Andy M and Switzer, Paul and Behar, Joseph V and Hern, Stephen C and Engelmann, William H and others},
+	journal={Journal of exposure analysis and environmental epidemiology},
+	volume={11},
+	number={3},
+	pages={1--1},
+	year={2001}
+}
+
+http://www.nature.com/jes/journal/v11/n3/full/7500165a.html
