needed a ource xD

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -18,8 +18,8 @@ The building is modelled by the use of an outline of the floor plan. The image w
 
 \subsection{RFID Indoor Positioning}
 Another solution is to utilise RFID to create checkpoints throughout a building. These checkpoint are placed in doors or other room entrances and thereby utilise a RFID scanner that reports any observed devices which is equipped with a RFID tag\cite{indoor_bin}. 
-RFID works by a scanner reading an id form the passing device then sending the tag of the scanned device, the scanners own id and the time-stamp for the scan to a host computer system. By knowing where the scanners are the system can keep track of the devices%\cite{RFIDjournal}.
-%http://www.rfidjournal.com/articles/view?1334
+RFID works by a scanner reading an id form the passing device then sending the tag of the scanned device, the scanners own id and the time-stamp for the scan to a host computer system. By knowing where the scanners are the system can keep track of the devices\cite{RFIDjournal}.
+
 RFID requires auxiliary hardware to set up the checkpoints, and is in addition to this limited to only work at these checkpoints. It is possible to connect the checkpoints and watch users resent history and in this way track the device. Thereby it can be know if the device entered or exited the room. It can however not be know where in the room the person are which makes it difficult to track someone in a large room.
 
 %Maby should be moved a bit
