--- a/bib.bib
+++ b/bib.bib
@@ -89,5 +89,11 @@
 	pages={1--1},
 	year={2001}
 }
+@MANUAL{RFIDjournal,
+	title = {RFID Business Applications},
+	author = {Bob Violino},
+	address = {\url{http://www.rfidjournal.com/articles/view?1334}},
+	date = {12-07-2002},
+	note = {Accessed: 25-2-2016}
+}
 
-http://www.nature.com/jes/journal/v11/n3/full/7500165a.html
